--- a/css/footer.css
+++ b/css/footer.css
@@ -26,7 +26,7 @@
 /* Icon footer color =  = #FFFFFF */
 /* Icon footer bg color = rgba(255, 255, 255, 0.1); */
 
-:root   {
+:root {
     --main-bg-color: #FFFFFF;
     --footer-bg-color: #2F303A;
     --hero-bg-color: #2F303A;
@@ -44,7 +44,7 @@
     --icon-main-color: #AFB1B8;
     --icon-benefits-bg-color: #F5F4FA;
     --icon-footer-bg-color: rgba(255, 255, 255, 0.1);
-    
+
 }
 
 *,
@@ -77,7 +77,7 @@ ul {
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
-    }
+}
 
 img {
     display: block;
@@ -103,7 +103,7 @@ img {
 }
 
 .visually-hidden {
-    position:absolute;
+    position: absolute;
     width: 1px;
     height: 1px;
     margin: -1px;
@@ -153,13 +153,13 @@ img {
 .mailto {
     display: flex;
     align-items: center;
-    
+
     color: var(--p-text-color);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    }
+}
 
 .mailto-items:not(:last-child) {
     margin-right: 50px;
@@ -180,9 +180,9 @@ img {
     color: var(--main-accent-color);
 }
 
-.mailto-icon{
+.mailto-icon {
     margin-right: 10px;
-    fill:#757575;
+    fill: #757575;
 }
 
 .mailto-link:hover .mailto-icon {
@@ -198,12 +198,12 @@ img {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    }
+}
 
 .site-nav .link {
     color: var(--main-text-color);
     text-decoration: none;
-    }
+}
 
 .site-nav .link.current {
     color: var(--main-accent-color);
@@ -216,8 +216,9 @@ img {
 
 .site-nav-items:not(:last-child) {
     margin-right: 50px;
-    
+
 }
+
 /* main page */
 
 .main {
@@ -238,10 +239,9 @@ img {
     padding-bottom: 200px;
 
     background-size: cover;
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)),
-         url(../images/hero.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+        url(../images/hero.jpg);
 }
 
 .hero .title {
@@ -249,7 +249,7 @@ img {
 
     margin-bottom: 30px;
 
-    color: var(--hero-text-color) ;
+    color: var(--hero-text-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -265,7 +265,7 @@ img {
     padding: 10px 10px;
     margin-right: auto;
     margin-left: auto;
-    
+
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -278,12 +278,12 @@ img {
     border: none;
     border-radius: 4px;
     border-color: transparent;
-   }
+}
 
 .hero .button:focus,
 .hero .button:hover {
     background-color: var(--button-hero-bg-color_hover);
-} 
+}
 
 
 /* main sections - common class for sections */
@@ -330,10 +330,10 @@ img {
     margin-bottom: 30px;
     justify-content: center;
     align-items: center;
-    
+
     width: 270px;
     height: 120px;
-    
+
     border-radius: 4px;
     background-color: var(--icon-benefits-bg-color);
 }
@@ -361,10 +361,10 @@ img {
     justify-content: space-between;
 }
 
-.team { 
+.team {
     padding-bottom: 94px;
-    background-color: var(--team-section-bg-color); 
-}    
+    background-color: var(--team-section-bg-color);
+}
 
 .team-list {
     display: flex;
@@ -409,7 +409,7 @@ img {
     border-radius: 0px 0px 4px 4px;
 }
 
-.team-social-list{
+.team-social-list {
     display: flex;
     justify-content: space-between;
     margin-top: 16px;
@@ -485,7 +485,7 @@ img {
 
     width: 170px;
     height: 92px;
-    
+
     border: 1px solid var(--icon-main-color);
     border-radius: 4px;
 }
@@ -520,7 +520,7 @@ img {
     text-align: center;
     cursor: pointer;
     border-color: transparent;
-   }
+}
 
 .button:focus,
 .button:hover {
@@ -528,7 +528,7 @@ img {
     color: var(--button-accent-text-color);
 }
 
-.projects-nav-item > .button{
+.projects-nav-item>.button {
     padding: 6px 22px;
     border-radius: 4px;
 }
@@ -536,14 +536,14 @@ img {
 .projects-nav {
     display: flex;
     justify-content: center;
-    
+
     margin-bottom: 50px;
 }
 
 .projects-list {
     display: flex;
     flex-wrap: wrap;
-    
+
     margin-left: -30px;
     margin-top: -30px;
 }
@@ -560,7 +560,7 @@ img {
 
 .projects-list-content-wrapper {
     padding: 20px 24px;
-    
+
     border: 1px solid var(--portfolio-cards-border-color);
     border-top: none;
 }
@@ -581,6 +581,11 @@ img {
     font-size: 16px;
     line-height: 1.9;
 }
+
+
+
+
+
 
 /* footer */
 
