add shadow portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -563,11 +563,10 @@ img {
     flex-basis: calc((100% - 90px)/3);
 }
 
-.projects-list-item-wrapper:hover {
-    border: 1px solid #EEEEEE;
+.projects-list-item:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .projects-list-content-wrapper {
