--- a/css/styles.css
+++ b/css/styles.css
@@ -531,6 +531,9 @@ img {
 .button:hover {
     background-color: var(--main-accent-color);
     color: var(--button-accent-text-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+            0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .projects-nav-item > .button{
